--- a/src/html/style.css
+++ b/src/html/style.css
@@ -96,7 +96,7 @@ table.statsIntervenants {
 	margin : 0%;
 }
 
-table.tab1 { margin : 0% 5% 2% 20%; }
+table.tab1 { margin : 0% 5% 2% calc(35% / 2); }
 table.statsIntervenants td { width : 50%; }
 
 
