--- a/style.css
+++ b/style.css
@@ -10,11 +10,18 @@ body {
 	margin : 0%;
 }
 
-h1 { text-align: center; }
-h2 { margin-left : 4%; }
+h1 {
+	text-align: center;
+}
+
+h2 {
+	margin-left : 4%;
+}
 
 
-td, th { padding : 1%; }
+td, th {
+	padding : 1%;
+}
 
 
 table {
@@ -22,9 +29,8 @@ table {
 	width : 85%;
 	border-collapse: collapse;
 	text-align: center;
+	border  : 2px solid #E9967A;
 }
-
-
 
 
 hr {
@@ -50,13 +56,6 @@ td.total { background : white; }
 
 tr.final    { border : 2px solid #E9967A; }
 td.tdFinal { background : white; }
-
-td.totalFinal {
-	border-left : 2px solid #E9967A;
-	background  : #E9967A;
-
-	font-weight : bold;
-}
 
 
 
@@ -100,8 +99,12 @@ table.statsIntervenants td { width : 50%; }
 }
 
 
-table.statsIntervenants, table.infosIntervenants { border  : 2px solid #E9967A; }
+td.totalFinal {
+	border-left : 2px solid #E9967A;
+	background  : #E9967A;
 
+	font-weight : bold;
+}
 
 
 /* ------------------------------------ */
@@ -109,10 +112,21 @@ table.statsIntervenants, table.infosIntervenants { border  : 2px solid #E9967A; 
 /*             FICHE MODULES            */
 /* ------------------------------------ */
 /* ------------------------------------ */
+table.infosModule { border : solid 2px #2E8B57; }
 
-table.infosModule > tbody tr:nth-child(even) { background : #8FBC8B; }
+.totalModule {
+	border-left : solid 2px #2E8B57;
 
-table.infosModule > tbody tr:nth-child(odd) { background : #F5FFFA; }
+	background : white;
+}
+
+table.infosModule > tbody tr:nth-child(even) {
+	background : #8FBC8B;
+}
+
+table.infosModule > tbody tr:nth-child(odd) {
+	background : #F5FFFA;
+}
 
 
 th.nomModule { width : 30%; }
@@ -123,15 +137,6 @@ table.infosModule > thead tr {
 }
 
 
-table.infosModule { border  : 2px solid #2E8B57; }
-
-
-.statsTotalModule td {
-	border-top : 2px solid #2E8B57;
-	background : white;
-}
-
-
 td.totalFinalModule {
 	border-left : 2px solid #2E8B57;
 	background  : #2E8B57;
@@ -139,4 +144,24 @@ td.totalFinalModule {
 	font-weight : bold;
 }
 
-.totalModule { border-left  : 2px solid #2E8B57; }
+
+
+/* ------------------------------------ */
+/* ------------------------------------ */
+/*        INFORMATIONS GENERALES        */
+/* ------------------------------------ */
+/* ------------------------------------ */
+table.infosGeneralesInter, table.infosGeneralesModule {
+	width : 60%;
+
+	margin : 0;
+	margin-left : calc( (100% - 60%) / 2 );
+}
+
+table.infosGeneralesInter, table.infosGeneralesModule th {
+	width : calc( 100% / 3 );
+}
+
+
+table.infosGeneralesInter  { border-color : #E9967A; }
+table.infosGeneralesModule { border-color : #2E8B57; }
